tests/baselines/reference/letAsIdentifier.errors.txt
tests/cases/compiler/letAsIdentifier.ts(2,5): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/letAsIdentifier.ts(5,1): error TS2300: Duplicate identifier 'a'.


==== tests/cases/compiler/letAsIdentifier.ts (2 errors) ====
    var let = 10;
    var a = 10;
        ~
!!! error TS2300: Duplicate identifier 'a'.
    let = 30;
    let
    a;
    ~
!!! error TS2300: Duplicate identifier 'a'.